objects/IS_Use_Case__c.object
<CustomObject>
    <description>Describes a set of steps to complete an action.  Use Cases are linked to IS Functions and describe how the function is used.</description>
    <fields>
        <fullName>Agent_s__c</fullName>
        <inlineHelpText>Name the role of a person who would perform the Triggering Events and/or User Steps.  This can also be the name of a process that initiates the use case.</inlineHelpText>
        <label>Agent(s)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Brief summary of the process performed by this use case.</inlineHelpText>
        <label>Description</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Desired_Outcome__c</fullName>
        <inlineHelpText>List the end state of affected items once the User Steps and any resulting workflow are complete.</inlineHelpText>
        <label>Desired Outcome</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <inlineHelpText>Use a common name to group related Use Cases</inlineHelpText>
        <label>Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_Business_Process__c</fullName>
        <formula>IS_System_Junction__r.IS_Business_Process__r.Name</formula>
        <label>IS Business Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_System_Junction_Number__c</fullName>
        <formula>IS_System_Junction__r.System_Junction_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS System Junction Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_System_Junction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IS System Junction</label>
        <referenceTo>IS_System_Process__c</referenceTo>
        <relationshipLabel>IS Use Cases</relationshipLabel>
        <relationshipName>IS_Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IS_System_Parent_Instance__c</fullName>
        <formula>IF(NOT(ISBLANK(IS_System_Junction__r.IS_System_Application__r.Primary_System__c)),
IS_System_Junction__r.IS_System_Application__r.Primary_System_Instance__c,
TEXT(IS_System_Junction__r.IS_System_Application__r.Type__c))</formula>
        <label>IS System Parent Instance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_System_Parent__c</fullName>
        <formula>IF(NOT(ISBLANK(IS_System_Junction__r.IS_System_Application__r.Primary_System__c)),
IS_System_Junction__r.IS_System_Application__r.Primary_System__r.Name,
IS_System__c)</formula>
        <label>IS System Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_System__c</fullName>
        <formula>IS_System_Junction__r.IS_System_Application__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IS System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Junction_Function__c</fullName>
        <formula>IS_System_Junction__r.Function__c</formula>
        <inlineHelpText>The part of the process performed by this interaction.  Or a functional grouping of Use Cases.</inlineHelpText>
        <label>Junction Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate the new version of a use case with the old one</description>
        <inlineHelpText>When a Use Case is updated, link to the new version here.</inlineHelpText>
        <label>Latest Version</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_Use_Case__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Use Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_Use_Case__c</referenceTo>
        <relationshipLabel>Use Case Version History</relationshipLabel>
        <relationshipName>IS_Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Used to sort Use Cases in a custom order</inlineHelpText>
        <label>zzzOrder</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_Conditions__c</fullName>
        <description>Describe the field values, record state, etc that must also exist for the Triggering Event(s) to activate the Use Case.</description>
        <label>Pre-Conditions</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_IS_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related IS Business Process</label>
        <referenceTo>IS_Business_Process__c</referenceTo>
        <relationshipLabel>IS Use Cases</relationshipLabel>
        <relationshipName>IS_Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_IS_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related IS System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IS_System__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Application</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IS_System__c</referenceTo>
        <relationshipLabel>IS Use Cases</relationshipLabel>
        <relationshipName>IS_Use_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Active = In use today
Inactive = Superseded or No longer used
Design = In design
Development = In development
Beta = In QA / UAT</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Steps__c</fullName>
        <inlineHelpText>Automated or coded steps performed by the system</inlineHelpText>
        <label>Technical Steps</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>A descriptive name which states the action performed</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Triggering_Event_s__c</fullName>
        <label>Triggering Event(s)</label>
        <length>8192</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>UC_Sort__c</fullName>
        <description>Used for sorting related lists and list views</description>
        <formula>CASE(TEXT(Status__c),
  &apos;Beta&apos;,&apos;1&apos;,
  &apos;Development&apos;,&apos;3&apos;,
  &apos;Design&apos;,&apos;5&apos;,
  &apos;Active&apos;,&apos;7&apos;,
  &apos;Inactive&apos;,&apos;9&apos;,
  &apos;0&apos;)
&amp; &apos;-&apos; 
&amp; TEXT(Use_Case_Number__c)
&amp; &apos;-&apos;
&amp; &apos;v&apos; &amp; Version_Number__c
&amp; &apos;-&apos;
&amp; Use_Case_Reference__c</formula>
        <inlineHelpText>Sort by Status, Group, and Use Case Reference</inlineHelpText>
        <label>UC Sort</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Method__c</fullName>
        <inlineHelpText>Name of the Apex class and method containing a unit test that runs this use case scenario.</inlineHelpText>
        <label>Unit Test Method</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Type__c</fullName>
        <inlineHelpText>An archived version is created for Major and Minor edits.</inlineHelpText>
        <label>Update Type</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case_Number__c</fullName>
        <defaultValue>000.000</defaultValue>
        <description>Combined with parent Process Number to generate Use Case Reference</description>
        <inlineHelpText>Unique Use Case reference for the related Process</inlineHelpText>
        <label>Use Case Number</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Case_Reference_Text__c</fullName>
        <label>Use Case Reference Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case_Reference_Unique__c</fullName>
        <description>Used to verify that a duplicate number for the same IS System Junction is not created</description>
        <label>Use Case Reference Unique</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Use_Case_Reference_Version__c</fullName>
        <label>Use Case Reference Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Case_Reference__c</fullName>
        <formula>&quot;UC-&quot; &amp; RIGHT(IS_System_Junction__r.System_Junction_Number__c ,LEN(IS_System_Junction__r.System_Junction_Number__c)-3) &amp; &quot;-&quot; &amp; TEXT(Use_Case_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Combination of System Number, Process Number, and Use Case Number</inlineHelpText>
        <label>Use Case Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Steps__c</fullName>
        <inlineHelpText>Steps taken by the end user to carry out the Use Case</inlineHelpText>
        <label>User Steps</label>
        <length>16384</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <defaultValue>&quot;0.00.00&quot;</defaultValue>
        <description>Updated via code based on Update Type.  Ex format 1.01.001</description>
        <inlineHelpText>Whole number units indicate major updates, such as replacement.  Decimal numbers indicate minor record edits</inlineHelpText>
        <label>Version Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Versioned_Status__c</fullName>
        <description>Used in workflow and validation formulas</description>
        <formula>OR (
  ISPICKVAL( Status__c , &quot;Active&quot;),
  ISPICKVAL( Status__c , &quot;Beta&quot;),
  ISPICKVAL( Status__c , &quot;Development&quot;)
)</formula>
        <label>Versioned Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zzzRecord_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Used in record name generation</inlineHelpText>
        <label>zzzRecord Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>zzzType__c</fullName>
        <formula>RecordType.Name</formula>
        <label>zzzType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zzzUse_Case_Reference_Version__c</fullName>
        <formula>Use_Case_Reference__c &amp; &quot;--&quot; &amp; Version_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Useful for sorting in a list by Use Case and Version Number</inlineHelpText>
        <label>zzzUse Case Reference Version</label>
        <type>Text</type>
    </fields>
    <label>IS Use Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Title__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <columns>Latest_Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>IS_System_Junction__c</columns>
        <columns>IS_System__c</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <columns>Latest_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>All_Use_Case_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Title__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>IS_System_Junction__c</columns>
        <columns>Version_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <columns>Latest_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <label>All Use Case Record Type</label>
    </listViews>
    <listViews>
        <fullName>Use_Cases_Active</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <label>Use Cases - Active</label>
    </listViews>
    <listViews>
        <fullName>Use_Cases_Design</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Design</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <label>Use Cases - Design</label>
    </listViews>
    <listViews>
        <fullName>Use_Cases_IS_System</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <label>Use Cases - &lt;IS System&gt;</label>
    </listViews>
    <listViews>
        <fullName>Use_Cases_Reference_Tracking</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>IS_System_Parent__c</columns>
        <columns>Related_IS_Business_Process__c</columns>
        <columns>IS_System_Junction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <label>Use Cases - Reference Tracking</label>
    </listViews>
    <listViews>
        <fullName>Use_Cases_SteelBrick_CPQ</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Use_Case_Reference__c</columns>
        <columns>Group__c</columns>
        <columns>Status__c</columns>
        <columns>Version_Number__c</columns>
        <columns>IS_Business_Process__c</columns>
        <columns>IS_System__c</columns>
        <columns>IS_System_Parent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>IS_Use_Case__c.Use_Case</value>
        </filters>
        <filters>
            <field>IS_System__c</field>
            <operation>equals</operation>
            <value>SteelBrick CPQ,Opportunities</value>
        </filters>
        <label>Use Cases - SteelBrick CPQ</label>
    </listViews>
    <nameField>
        <displayFormat>UC-{00000}</displayFormat>
        <label>IS Use Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IS Use Cases</pluralLabel>
    <recordTypes>
        <fullName>Use_Case</fullName>
        <active>true</active>
        <description>A series of steps to complete a process</description>
        <label>Use Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Version_History</fullName>
        <active>true</active>
        <description>Used for history of past versions of a Use Case</description>
        <label>Version History</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Use_Case_Revision_Validation</fullName>
        <active>true</active>
        <description>If Versioned Status = TRUE and Update Type is &apos;Revision&apos;,  then only allow changes to the Agent, Description, Order, Short Title, and Title fields.  Other updates require a Minor or Major update type or a different Status</description>
        <errorConditionFormula>AND( 
  Versioned_Status__c,
  ISPICKVAL( Update_Type__c , &quot;Revision&quot;),
  OR(
    ISCHANGED(Desired_Outcome__c),
    ISCHANGED(Related_IS_Business_Process__c),
    ISCHANGED(Pre_Conditions__c),
    ISCHANGED(Status__c),
    ISCHANGED(Technical_Steps__c),
    ISCHANGED(Triggering_Event_s__c),
    ISCHANGED(zzzType__c),
    ISCHANGED(User_Steps__c)
  )
)</errorConditionFormula>
        <errorMessage>When &apos;Versioned Status&apos; = true and Update Type is &apos;Revision&apos;, only the Agent, Description, Order, Short Title, Update Type, and Title fields can be updated.</errorMessage>
    </validationRules>
</CustomObject>